--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Video</h2>
     <video controls width="80%" poster="cover.jpg">
 
-      <source src="video.mp4" type="video/mp4">
+      <source src="https://www.youtube.com/watch?v=7xqLPuxeZfo&ab_channel=AryanRaj" type="video/mp4">
 
       Sorry, your browser doesn't support mp4 videos. <br>
       &copy 2021 Aryan Raj
