--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
   </div>
   <div class="content">
     <h2>Video</h2>
-    <video controls width="80%" poster="cover.jpg">
-
-      <source src="https://www.youtube.com/watch?v=7xqLPuxeZfo&ab_channel=AryanRaj" type="video/mp4">
-
-      Sorry, your browser doesn't support mp4 videos. <br>
-      &copy 2021 Aryan Raj
-    </video>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7xqLPuxeZfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="footer">
     &copy Website 2021 Aryan Raj <br>
