--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="content">
     <h2>Video</h2>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7xqLPuxeZfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocoookie.com/embed/7xqLPuxeZfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="footer">
     &copy Website 2021 Aryan Raj <br>
