--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   </div>
   <div class="content">
     <h2>Video</h2>
-<iframe width="560" height="315" src="https://www.youtube-nocoookie.com/embed/7xqLPuxeZfo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+<iframe src="https://player.vimeo.com/video/522460020" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe> </div>
   <div class="footer">
     &copy Website 2021 Aryan Raj <br>
     &copy Video 2021 Aryan Raj & Coleman Gieselamn <br>
